# kairos

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LEDGER.md  LICENSE  MAINTAINERS.md  Open-Kairos.ps1  README.md  REQUIREMENTS.md  SECURITY.md  TESTS.md  rust-toolchain.toml  scaffold.yml
.agents/skills/kairos-integration-test/: SKILL.md
.agents/skills/kairos-ui-guidelines/: SKILL.md
.chronomemory/: events.wal
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  incorrect_detection.md
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  release.yml
.specsmith/: agent-tools.json  agents.md.bak  config.yml  credit-budget.json  esdb_migration_manifest.json  ledger.jsonl  migration-state.json  requirements.json  testcases.json  trace.jsonl  workitems.json
.specsmith/compliance/: README.md  eu-ai-act.yaml
app/: Cargo.toml  build.rs
app/i18n/: PROGRESS.md
app/i18n/en/: kairos.ftl
app/i18n/zh-CN/: kairos.ftl
app/src/: app_menus.rs  app_state.rs  governance_project.rs  kairos_context_fill.rs  kairos_shell_memory.rs  kairos_updater.rs  lib.rs  root_view.rs
app/src/ai/: llms.rs  mod.rs  request_usage_model.rs  request_usage_model_test.rs
app/src/auth/: auth_manager.rs  auth_state.rs
app/src/autoupdate/: github.rs  mac.rs  windows.rs
app/src/drive/: settings.rs
app/src/notebooks/: mod.rs
app/src/resource_center/: view.rs
app/src/server/: server_api.rs
app/src/settings/: ai.rs  app_icon.rs  initializer.rs
app/src/settings_view/: about_page.rs  agent_defaults_page.rs  agent_providers_widget.rs  ai_page.rs  ai_providers_page.rs  bug_report_page.rs  compliance_page.rs  docs_page.rs  esdb_page.rs  eval_page.rs  governance_page.rs  governance_panel.rs  mod.rs  settings_agent.rs  settings_page.rs  (+5 more)
crates/computer_use/: Cargo.toml
crates/editor/: Cargo.toml
crates/input_classifier/: Cargo.toml
crates/integration/: Cargo.toml
crates/kairos-governance/: Cargo.toml
crates/kairos-governance/src/: lib.rs  session.rs
crates/kairos-governance/src/governance/: client.rs  mod.rs  server.rs
crates/kairos-governance/tests/: governance_tests.rs
crates/warpui/: Cargo.toml
docs/: ARCHITECTURE.md  FORK-SETUP.md  LEDGER.md  REQUIREMENTS.md  TESTS.md  specsmith.yml
docs/governance/: CONTEXT-BUDGET.md  DRIFT-METRICS.md  LIFECYCLE.md  ROLES.md  RULES.md  SESSION-PROTOCOL.md  VERIFICATION.md
scripts/: exec.cmd  exec.sh  run.cmd  run.sh  setup.cmd  setup.sh
specs/cloud-removal/: PRODUCT.md
src/: lib.rs  main.rs  session.rs  tui.rs
src/governance/: server.rs
tests/: governance_tests.rs
themes/: kairos_amber.yaml
(+77 files in other folders)
