[package]
name = "kairos"
version = "0.1.0"
edition = "2021"
description = "Kairos — epistemically-governed terminal runtime"
license = "MIT"
repository = "https://github.com/BitConcepts/kairos"
readme = "README.md"
keywords = ["terminal", "governance", "aee", "specsmith"]
categories = ["command-line-utilities"]

[[bin]]
name = "kairos"
path = "src/main.rs"

[dependencies]
# specsmith governance backend client (REST + WebSocket)
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
