[package]
name = "kairos"
version = "0.1.0"
edition = "2021"
description = "Kairos — epistemically-governed terminal runtime"
license = "MIT"
repository = "https://github.com/BitConcepts/kairos"
readme = "README.md"
keywords = ["terminal", "governance", "aee", "specsmith"]
categories = ["command-line-utilities"]

[lib]
name = "kairos"
path = "src/lib.rs"

[[bin]]
name = "kairos"
path = "src/main.rs"

[dependencies]
# specsmith governance backend client (REST + WebSocket)
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# URL parsing for I2 invariant enforcement
url = "2"
# Synchronous HTTP for startup health polling in GovernanceServer
ureq = "2"
# CLI argument parsing (governance daemon invocation)
clap = { version = "4", features = ["derive"] }
# Timestamp formatting for session log entries
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tokio-test = "0.4"
